--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "axios": "^0.19.2",
+    "babel-plugin-dotenv-import": "^2.1.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-elements": "^2.0.4",
@@ -26,7 +27,12 @@
     "react-native-screens": "^2.9.0",
     "react-native-size-matters": "^0.3.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
