--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
           android:exported="true"/>
 
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCy5nJ4GSksVmFU2Gb5LIXTi00DpTviFVQ"/>
     </application>
 
 </manifest>
