--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.3",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
@@ -34,7 +35,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
