--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/compat": "^5.2.3",
@@ -18,7 +19,10 @@
     "@react-navigation/stack": "^5.7.1",
     "axios": "^0.19.2",
     "babel-plugin-dotenv-import": "^2.1.0",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "react": "16.13.1",
+    "react-moment": "^0.9.7",
     "react-native": "0.63.2",
     "react-native-elements": "^2.0.4",
     "react-native-flash-message": "^0.1.15",
