--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-size-matters": "^0.3.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
